--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=ProjectDanceStudio
+server.port=2828
+
+data.source.driver-class-name= org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+spring.datasource.password=19111993
+spring.datasource.url=jdbc:postgresql://localhost:5432/ProjectDanceStudio
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
