--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,22 @@ spring.datasource.password=19111993
 spring.datasource.url=jdbc:postgresql://localhost:5432/ProjectDanceStudio
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vadimkh17@gmail.com
+spring.mail.password=vhif kghh ijvs duhz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
