--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,10 @@ spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
+
+
+
+#docker-compose build
+
+
+#docker-compose up -d
