--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,14 @@ spring.datasource.hikari.max-lifetime=1800000
 
 
 
+
+spring.security.user.name=q
+spring.security.user.password=q
+
+
+
+
+
 #docker-compose build
 
 
