--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,8 +31,8 @@ spring.datasource.hikari.max-lifetime=1800000
 
 
 
-spring.security.user.name=q
-spring.security.user.password=q
+#spring.security.user.name=q
+#spring.security.user.password=q
 
 
 
